--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 	<html>
 		<head>
-			<title>My blog</title>
+			<title>Ibrahim - Blog</title>
 			<link rel="stylesheet" href="style.css">
 			<link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		</head>
